After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 672773 - autologin is broken in 3.3.92.1
autologin is broken in 3.3.92.1
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
: 672816 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2012-03-24 22:04 UTC by Matthias Clasen
Modified: 2012-03-27 03:27 UTC
See Also:
GNOME target: 3.4
GNOME version: ---


Attachments
display: fix autologin (1.00 KB, patch)
2012-03-27 03:26 UTC, Ray Strode [halfline]
committed Details | Review

Description Matthias Clasen 2012-03-24 22:04:03 UTC
Originally filed here: https://bugzilla.redhat.com//show_bug.cgi?id=806114

Relevant log file fragment:

Mar 22 15:11:10 f17alpha gdm-simple-slave[762]: DEBUG(+): GdmSlave: Got timed login details: 0  0
Mar 22 15:11:10 f17alpha gdm-simple-slave[762]: DEBUG(+): Invalid NULL username for auto/timed login
Comment 1 Cosimo Cecchi 2012-03-26 13:39:47 UTC
*** Bug 672816 has been marked as a duplicate of this bug. ***
Comment 2 Ray Strode [halfline] 2012-03-27 03:26:20 UTC
Created attachment 210667 [details] [review]
display: fix autologin

commit b436764275e513ebd5b0546ab047f0fce2f34b35 tried to prevent
autologin on auxilliary seats, but the conditional was inverted,
so it ended up preventing autologin on the primary seat.
Comment 3 Ray Strode [halfline] 2012-03-27 03:27:34 UTC
Attachment 210667 [details] pushed as 9e26074 - display: fix autologin

Pushed.  I'll talk to r-t and see if I can get a 3.4.0.1 in to
the release.