display: fix autologin

commit b436764275e513ebd5b0546ab047f0fce2f34b35 tried to prevent
autologin on auxilliary seats, but the conditional was inverted,
so it ended up preventing autologin on the primary seat.

https://bugzilla.gnome.org/show_bug.cgi?id=672773